Sun Oct  02 03:45:39 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Added functions to change the position and alignment of the tabs in
	  a Ewl_Notebook.
	* Made ewl_main_quit only exit the ecore event loop.
	  We don't destroy all widgets or call exit() anymore.

Sun Sep  30 03:38:44 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Added a padd structure to the Ewl_Object.
	* Made the Ewl_Box make use of the new padding in the Ewl_Object, and
	  get rid of the old x_padding/y_padding.
	* If the child had a minimum height that was larger then the Ewl_Box it
	  self, it would resize it to make the children fit. Not any more.
	* Made the Ewl_Separator set its maximum size to the ebits object
	  when realizing it.
	* Same goes for the Ewl_Spinner & Ewl_Entry.
	* Made Ewl_Image work.
	* When realizing a Ewl_CheckButton with a checked state, it didn't
	  set the Check bit to clicked, fixed.
	* Only check the debug enable checkbutton if its enabled.
	* Made the Ewl_Image call evas events on mouse down, mouse up and
	  mouse move when the image is a ebits.

Sat Sep  29 07:37:45 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Added a Ewl_Position enum.
	* Made it possible to set the label position on Ewl_CheckButton's &
	  Ewl_RadioButton's.
	* Read the user config before it had been created in ewl_config when
	  running it for the first time.

Fri Sep  28 23:53:19 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed memleak in ewl_config_get_render_method().
	* Added a ewl_config_reread_and_apply(), which rereads the user config
	  and apply the changed settings.
	* Added a never ending timer which calls ewl_config_reread_and_apply
	  every 0.5 second.
	* Cleaned up ewl_debug.h.
	* Made the test program use ewl_config_set_* and ewl_config_get_*
	  instead of duplicating code.

Fri Sep  28 20:56:15 2001 Christopher Rosendahl <crosendahl@northernwatch.com>